# django-starter-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: CONTRIBUTING.md  README.md  architecture.md
docs/adr/: 001-src-layout.md  002-custom-user-model.md  003-uuid-primary-keys.md  004-service-layer.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: startapp.sh
src/: conftest.py
src/apps/core/: admin.py  models.py
src/apps/users/: admin.py  tests.py  urls.py
src/apps/users/migrations/: 0001_initial.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: exceptions.py  middleware.py  models.py
src/core/tests/: test_exceptions.py  test_middleware.py
src/templates/: base.html  home.html
